theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Approved_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Deletion?</label>
    <type>Checkbox</type>
</CustomField>