theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <displayFormat>CID-{0000}</displayFormat>
    <label>Course ID</label>
    <type>AutoNumber</type>
</CustomField>