theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Current_Developer__c.field-meta.xml
<CustomField>
    <fullName>Current_Developer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Developer</label>
    <referenceTo>Course_Developer__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>