theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Dev_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Dev_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>