theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Dev_Team_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Dev_Team_Member_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Team Member 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Courses1</relationshipName>
    <type>Lookup</type>
</CustomField>