theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Development_Team__c.field-meta.xml
<CustomField>
    <fullName>Development_Team__c</fullName>
    <label>Development Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dev_Team_Fill</valueSetName>
    </valueSet>
</CustomField>