theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Group_Tutoring__c.field-meta.xml
<CustomField>
    <fullName>Group_Tutoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Tutoring?</label>
    <type>Checkbox</type>
</CustomField>