theLanguageEmporium/force-app/main/default/objects/Course__c/fields/Synced_to_Frontend__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_Frontend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to Frontend?</label>
    <type>Checkbox</type>
</CustomField>