theLanguageEmporium/force-app/main/default/objects/Course__c/validationRules/Course_Approved_to_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Approved_to_Open</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Approval_Status__c, &apos;Approved&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Completed&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The course must be approved in order to be open!</errorMessage>
</ValidationRule>